# Nimbus

./: .env.example  .gitignore  404.html  EXECUTIVE_SUMMARY.md  LEGAL.md  README.md  _headers  buy.html  buy.txt  designdoc.md  designdocfull.md  governance.html  governance.txt  index.html  index.txt  master designdoc.md  next.config.js  package-lock.json  package.json  pools.html  pools.txt  portfolio.html  portfolio.txt  settle.html  settle.txt  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
components/: ErrorBoundary.tsx  LoadingSkeleton.tsx  Nav.tsx  NetworkStatus.tsx  TransactionStatus.tsx  WalletProvider.tsx
db/: encryption.sql  schema.sql
docs/: PROFESSIONAL_AUDIT_CHECKLIST.md
governance/: README.md  upgrade-authority.md
lib/: climafi.ts  deserialize.ts  nimbus.ts
merged-app/: layout.tsx  page.tsx
offchain/: alerting.ts  emergency.ts  log-integrity.ts  monitoring.ts  observability.ts  oracle-aggregator.ts  policy-monitor.ts  rate-limiter.ts  service-auth.ts  switchboard-oracle.ts
programs/climafi/: Cargo.toml
programs/climafi/src/: compute.rs  constants.rs  economic_safety.rs  errors.rs  governance.rs  lib.rs  nonce.rs  reentrancy.rs  risk.rs  switchboard.rs  timelock.rs  withdraw.rs
programs/climafi/tests/: proptest_settlement.rs
programs/nimbus/: Cargo.toml
programs/nimbus/src/: constants.rs  economic_safety.rs  errors.rs  governance.rs  lib.rs  nonce.rs  reentrancy.rs  risk.rs  state.rs  switchboard.rs  timelock.rs
scripts/: generate-security-headers.js  run-security-tests.sh  security-gate.sh
(+72 files in other folders)
