[package]
name = "nimbus"
version = "0.1.0"
description = "Nimbus - Parametric Climate Risk Protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["derive", "init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.18.0"

[dev-dependencies]
proptest = "1.4.0"